API route added: '/screens/:moveId/playDate'
