# swagger_output.json
@@ -54,45 +54,6 @@
         }
       }
     },
-    "/api/upload/image": {
-      "post": {
-        "tags": [
-          "Upload"
-        ],
-        "summary": "上傳圖片",
-        "description": "上傳圖片",
-        "parameters": [
-          {
-            "name": "image",
-            "in": "formData",
-            "type": "file",
-            "required": "false",
-            "description": "Some description..."
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "回傳URL",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "status": {
-                  "type": "boolean",
-                  "example": true
-                },
-                "data": {
-                  "type": "string",
-                  "example": "{ fileUrl:'xxx' }"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          }
-        }
-      }
-    },
     "/api/member/signup": {
       "post": {
         "tags": [
@@ -1394,7 +1355,7 @@
         }
       }
     },
-    "/api/screen/screens/{moveId}/playDate": {
+    "/api/screens/{movieId}/playDate": {
       "get": {
         "tags": [
           "Screen"
@@ -1403,7 +1364,7 @@
         "description": "某部電影所有播放日期",
         "parameters": [
           {
-            "name": "moveId",
+            "name": "movieId",
             "in": "path",
             "required": true,
             "type": "string",
